comment the enquiry text

--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -48,30 +48,30 @@
                         <%= f.input :end_at, label: 'End Time of Product', label_html: {class: 'label'}, default: @product.end_at, input_html: {class: 'select-field'}  %>
                       </div>
                     </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="rent" class="label">Per Hour Price</label>
-                        <p class="select-text"><%= @product.per_hour_price %></p>
-                      </div>
-                    </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="Price" class="label">Per Day Price</label>
-                        <p class="select-text"><%= @product.per_day_price %></p>
-                      </div>
-                    </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="rent" class="label">Per Week Price</label>
-                        <p class="select-text"><%= @product.per_week_price %></p>
-                      </div>
-                    </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="Price" class="label">Per Month Price</label>
-                        <p class="select-text"><%= @product.per_month_price %></p>
-                      </div>
-                    </div>
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="rent" class="label">Per Hour Price</label>-->
+                        <!--<p class="select-text"><%#= @product.per_hour_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="Price" class="label">Per Day Price</label>-->
+                        <!--<p class="select-text"><%#= @product.per_day_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="rent" class="label">Per Week Price</label>-->
+                        <!--<p class="select-text"><%#= @product.per_week_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="Price" class="label">Per Month Price</label>-->
+                        <!--<p class="select-text"><%#= @product.per_month_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
                     <!--<div class="col-xs-12">-->
                       <!--<div class="field-con">-->
                         <!--<label for="rent" class="label">Rent</label>-->
@@ -122,30 +122,30 @@
                         <%= f.input :end_at, label: 'End Time of Product', label_html: {class: 'label'}, default: @service.end_at, input_html: {class: 'select-field'}  %>
                       </div>
                     </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="rent" class="label">Per Hour Price</label>
-                        <p class="select-text"><%= @service.per_hour_price %></p>
-                      </div>
-                    </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="Price" class="label">Per Day Price</label>
-                        <p class="select-text"><%= @service.per_day_price %></p>
-                      </div>
-                    </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="rent" class="label">Per Week Price</label>
-                        <p class="select-text"><%= @service.per_week_price %></p>
-                      </div>
-                    </div>
-                    <div class="col-xs-12">
-                      <div class="field-con">
-                        <label for="Price" class="label">Per Month Price</label>
-                        <p class="select-text"><%= @service.per_month_price %></p>
-                      </div>
-                    </div>
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="rent" class="label">Per Hour Price</label>-->
+                        <!--<p class="select-text"><%#= @service.per_hour_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="Price" class="label">Per Day Price</label>-->
+                        <!--<p class="select-text"><%#= @service.per_day_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="rent" class="label">Per Week Price</label>-->
+                        <!--<p class="select-text"><%#= @service.per_week_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-xs-12">-->
+                      <!--<div class="field-con">-->
+                        <!--<label for="Price" class="label">Per Month Price</label>-->
+                        <!--<p class="select-text"><%#= @service.per_month_price %></p>-->
+                      <!--</div>-->
+                    <!--</div>-->
                     <!--<div class="col-xs-12">-->
                       <!--<div class="field-con">-->
                         <!--<label for="rent" class="label">Price Type</label>-->
