--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -380,6 +380,9 @@
     border-radius: 5px;
     padding:10px 0;
     margin-bottom: 10px;
+    -webkit-box-shadow: 0px 0px 2px 0px rgba(50, 50, 50, 0.3);
+    -moz-box-shadow:    0px 0px 2px 0px rgba(50, 50, 50, 0.3);
+    box-shadow:         0px 0px 2px 0px rgba(50, 50, 50, 0.3);
     h5.product-name{
       font-size: 18px;
       margin: 0;
