--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -132,7 +132,7 @@
 
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :negotiable %>
+                    <span class="negotiable-text">Negotiable</span> <%= f.input :negotiable, label: '', input_html: {class: 'negotiable-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
