--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -204,8 +204,9 @@
 
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-                <li class="dropdown"><a href="/customer/profile"><%#= current_user.email %> My Account</a>
+                <li class="dropdown"><a href="javascript:void(0)"><%#= current_user.email %> My Account</a>
                   <ul class="dropdown-menu dropdown-menu-shipping-cart">
+                    <li><a href="/customer/profile">My Profile</a></li>
                     <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
                     <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
                     <li><%= link_to 'Products', customer_products_path %></li>
