--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -214,7 +214,7 @@
                       </h5>
                       <div class="product-caption-price">
                   <span class="product-caption-price-new">
-                    ₹<%= service.per_hour_price %>
+                    starting @ ₹<%= service.per_hour_price %>
                   </span>
 
                       </div>
