chnages on home page

--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-4 col-xs-12">
         <h4 class="widget-title-sm">ByeBuying</h4>
         <!--<h4 class="widget-title-sm">Barter</h4>-->
-        <p>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad</p>
+        <p>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad, +91 8911903906</p>
       </div>
       <div class="col-sm-4 col-xs-12">
 
