--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -11,6 +11,8 @@
               </li>
               <li><a href="/faq">FAQ</a>
               </li>
+              <li><a href="/blog">Blog</a>
+              </li>
               <li><a href="/contact_us">Contact Us</a>
               </li>
             </ul>
