chnages on home page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -137,7 +137,7 @@
   <div class="row">
     <div class="col-sm-12">
       <p>
-        <%= link_to 'View all from this seller', all_user_path(@product.user_id) %>
+        <%= link_to 'View all Post of this seller', all_user_path(@product.user_id) %>
       </p>
     </div>
   </div>
