--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -164,7 +164,8 @@
                       </h5>
                       <div class="product-caption-price">
                   <span class="product-caption-price-new">
-                    starting @ ₹<%= product.per_hour_price %>
+                    <!--starting @ -->
+                    ₹<%= product.per_hour_price %>
                     <%# if product.per_hour_price.present? %>
                         <!--Per Hr-->
                     <%# else if product.per_day_price.present? %>
@@ -214,7 +215,8 @@
                       </h5>
                       <div class="product-caption-price">
                   <span class="product-caption-price-new">
-                    starting @ ₹<%= service.per_hour_price %>
+                    <!--starting @ -->
+                    ₹<%= service.per_hour_price %>
                   </span>
 
                       </div>
