blog page changes

--- a/app/views/welcome/blog.html.erb
+++ b/app/views/welcome/blog.html.erb
@@ -52,35 +52,35 @@
           Renting presents a real solution to the growing problems of overconsumption, for it replaces the buy and sell economy with a more economical approach based on usage and usefulness. Renting is thus a new more sustainable equilibrium for our economy, environment and society.
         </p>
       </article>
-      <hr />
-      <h3 class="widget-title">Leave a Comment</h3>
-      <form>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Name *</label>
-              <input class="form-control" type="text" />
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>E-mail *</label>
-              <input class="form-control" type="text" />
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Website</label>
-              <input class="form-control" type="text" />
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label>Comment</label>
-          <textarea class="form-control"></textarea>
-        </div>
-        <input class="btn btn-primary" type="submit" value="Leave a Comment" />
-      </form>
+      <!--<hr />-->
+      <!--<h3 class="widget-title">Leave a Comment</h3>-->
+      <!--<form>-->
+        <!--<div class="row">-->
+          <!--<div class="col-md-4">-->
+            <!--<div class="form-group">-->
+              <!--<label>Name *</label>-->
+              <!--<input class="form-control" type="text" />-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-4">-->
+            <!--<div class="form-group">-->
+              <!--<label>E-mail *</label>-->
+              <!--<input class="form-control" type="text" />-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-md-4">-->
+            <!--<div class="form-group">-->
+              <!--<label>Website</label>-->
+              <!--<input class="form-control" type="text" />-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="form-group">-->
+          <!--<label>Comment</label>-->
+          <!--<textarea class="form-control"></textarea>-->
+        <!--</div>-->
+        <!--<input class="btn btn-primary" type="submit" value="Leave a Comment" />-->
+      <!--</form>-->
       <div class="gap gap-small"></div>
     </div>
   </div>
