detail post btn

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -135,9 +135,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 text-center">
       <p>
-        <%= link_to 'View all Post of this seller', all_user_path(@product.user_id) %>
+        <%= link_to 'View all Post of this seller', all_user_path(@product.user_id), class: 'btn all_post_button btn-primary' %>
       </p>
     </div>
   </div>
