review and user post

--- a/app/views/users/all.html.erb
+++ b/app/views/users/all.html.erb
@@ -1,36 +1,28 @@
-<header class="page-header page-header-banner">
-  <div class="container">
-    <div class="page-header-banner-inner">
-      <h1 class="page-title">Products</h1>
-    </div>
-  </div>
-</header>
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="row" data-gutter="15">
-        <% @products.each do |product| %>
-            <%= render partial: 'products/product', locals: { product: product } %>
-        <% end %>
+  <div class="gap"></div>
+  <h1 class="page-title"><%= current_user.name %></h1>
+  <div class="tabbable product-tabs">
+    <ul class="nav nav-tabs" id="myTab">
+      <li class="active"><a href="#tab-1" data-toggle="tab">Products</a>
+      </li>
+      <li><a href="#tab-2" data-toggle="tab">Services</a>
+      </li>
+      <div class="clearfix"></div>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="tab-1">
+        <div class="row" data-gutter="15">
+          <% @products.each do |product| %>
+              <%= render partial: 'products/product', locals: { product: product } %>
+          <% end %>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
-<div class="gap"></div>
-<header class="page-header page-header-banner">
-  <div class="container">
-    <div class="page-header-banner-inner">
-      <h1 class="page-title">Services</h1>
-    </div>
-  </div>
-</header>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="row" data-gutter="15">
-        <% @services.each do |service| %>
-            <%= render partial: 'services/service', locals: { service: service } %>
-        <% end %>
+      <div class="tab-pane fade" id="tab-2">
+        <div class="row" data-gutter="15">
+          <% @services.each do |service| %>
+              <%= render partial: 'services/service', locals: { service: service } %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
