--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -215,7 +215,7 @@
                       </h5>
                       <div class="product-caption-price">
                   <span class="product-caption-price-new">
-                    <!--starting @ -->
+                    ;<!--starting @ -->
                     ₹<%= service.per_hour_price %>
                   </span>
 
