--- a/app/views/customer/advertisements/index.html.erb
+++ b/app/views/customer/advertisements/index.html.erb
@@ -9,8 +9,10 @@
 <div class="customer-main-con">
   <div class="row">
     <div class="col-xs-12">
-      <h1 class="page-title">Advertisements</h1>
-      <%= link_to 'Post an Add', new_customer_advertisement_path, class: 'btn btn-primary add-btn pull-right'  %>
+      <h1 class="page-title">
+        Advertisements
+        <%= link_to 'Post an Add', new_customer_advertisement_path, class: 'btn btn-primary add-btn pull-right'  %>
+      </h1>
       <div class="clearfix"></div>
     </div>
     <div class="col-xs-12">
