--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -9,8 +9,10 @@
 <div class="customer-main-con">
   <div class="row">
     <div class="col-sm-12">
-      <h1 class="page-title">Product</h1>
-      <%= link_to 'Post Product', new_customer_product_path, class: 'btn btn-primary add-btn pull-right' %>
+      <h1 class="page-title">
+        Product
+        <%= link_to 'Post Product', new_customer_product_path, class: 'btn btn-primary add-btn pull-right' %>
+      </h1>
       <div class="clearfix"></div>
     </div>
   </div>
