--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -9,8 +9,10 @@
 <div class="customer-main-con">
   <div class="row">
     <div class="col-sm-12">
-      <h1 class="page-title">Services</h1>
-      <%= link_to 'Post Service', new_customer_service_path, class: 'btn btn-primary add-btn pull-right' %>
+      <h1 class="page-title">
+        Services
+        <%= link_to 'Post Service', new_customer_service_path, class: 'btn btn-primary add-btn pull-right' %>
+      </h1>
       <div class="clearfix"></div>
     </div>
   </div>
