change class name

--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -528,7 +528,7 @@
   width: 20px;
   left: 23px;
 }
-.all_post_button{
+.seller_post_button{
   width: 100%;
   margin-top: 30px;
   padding: 10px;
