--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -75,7 +75,7 @@
               <p class="product-page-side-text">You have one month from the shipping confirmation email.</p>
             </div>
           </div>
-          <%= link_to 'View all Post of this seller', all_user_path(@product.user_id), class: 'btn all_post_button btn-primary' %>
+          <%= link_to 'View all Post of this seller', all_user_path(@product.user_id), class: 'btn seller_post_button btn-primary' %>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12 pull-sm-left">
           <div class="box">
