chnages as per sheet

--- a/app/views/customer/advertisements/show.html.erb
+++ b/app/views/customer/advertisements/show.html.erb
@@ -87,7 +87,7 @@
                   <h4>Per hour cost:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @advertisement.per_hour_cost %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @advertisement.per_hour_cost %></p>
                 </div>
               </div>
             </div>
