--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -176,7 +176,7 @@
                   <h4>Per Hour Price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.per_hour_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.per_hour_price %></p>
                 </div>
               </div>
             </div>
@@ -188,7 +188,7 @@
                   <h4>Per Day Price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.per_day_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.per_day_price %></p>
                 </div>
               </div>
             </div>
@@ -200,7 +200,7 @@
                   <h4>Per Week Price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.per_week_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.per_week_price %></p>
                 </div>
               </div>
             </div>
@@ -212,7 +212,7 @@
                   <h4>Per Month Price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.per_month_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.per_month_price %></p>
                 </div>
               </div>
             </div>
@@ -224,7 +224,7 @@
                   <h4>Refundable security:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.refundable_security %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.refundable_security %></p>
                 </div>
               </div>
             </div>
@@ -236,7 +236,7 @@
                   <h4>Cost of replacement:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.cost_of_replacement %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.cost_of_replacement %></p>
                 </div>
               </div>
             </div>
