--- a/app/views/customer/services/show.html.erb
+++ b/app/views/customer/services/show.html.erb
@@ -208,7 +208,7 @@
                   <h4>Per hour price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @service.per_hour_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @service.per_hour_price %></p>
                 </div>
               </div>
             </div>
@@ -220,7 +220,7 @@
                   <h4>Per day price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @service.per_day_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @service.per_day_price %></p>
                 </div>
               </div>
             </div>
@@ -232,7 +232,7 @@
                   <h4>Per week price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @service.per_week_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @service.per_week_price %></p>
                 </div>
               </div>
             </div>
@@ -244,7 +244,7 @@
                   <h4>Per month price:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @service.per_month_price %></p>
+                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @service.per_month_price %></p>
                 </div>
               </div>
             </div>
