--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -54,48 +54,52 @@
         <!--</tbody>-->
       <!--</table>-->
       <div class="customer-main-show">
-        <% @services.each_with_index do |service, index| %>
-            <div class="white-bg">
-              <div class="col-md-2 col-sm-3 col-xs-12 text-center">
-                <div class="add-image-con">
-                  <% if service.service_images.any? %>
-                      <%= image_tag service.service_images.first.image(:size_500x500), class: 'img-responsive' %>
-                  <% else %>
-                      <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
-                  <% end %>
-                </div>
-              </div>
-              <div class="col-md-10 col-sm-9 col-xs-12">
-                <h2 class="heading"><%= service.subcategory.name %></h2>
-                <span>Status: <%= service.admin_verified ? 'Approved' : 'Pending' %></span>
-                <h5 class="time-option"><%= service.start_at.strftime(time_format) %> - <%= service.end_at.strftime(time_format) %></h5>
-                <p class="description"><%= service.service_description %></p>
-                <div class="dropdown-main">
-                  <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+        <% if @services.present? %>
+            <% @services.each_with_index do |service, index| %>
+                <div class="white-bg">
+                  <div class="col-md-2 col-sm-3 col-xs-12 text-center">
+                    <div class="add-image-con">
+                      <% if service.service_images.any? %>
+                          <%= image_tag service.service_images.first.image(:size_500x500), class: 'img-responsive' %>
+                      <% else %>
+                          <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+                      <% end %>
+                    </div>
+                  </div>
+                  <div class="col-md-10 col-sm-9 col-xs-12">
+                    <h2 class="heading"><%= service.subcategory.name %></h2>
+                    <span>Status: <%= service.admin_verified ? 'Approved' : 'Pending' %></span>
+                    <h5 class="time-option"><%= service.start_at.strftime(time_format) %> - <%= service.end_at.strftime(time_format) %></h5>
+                    <p class="description"><%= service.service_description %></p>
+                    <div class="dropdown-main">
+                      <span dyn_click="<%= index + 1 %>" class="sort-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                      <div class="clearfix"></div>
+                      <ul class="dropdown-option product_<%= index + 1 %>">
+                        <span class="arrow-top"></span>
+                        <li>
+                          <%= link_to customer_service_path(service) do %>
+                              <i class="fa fa-eye"></i> Show
+                          <%- end %>
+                        </li>
+                        <li>
+                          <%= link_to edit_customer_service_path(service) do %>
+                              <i class="fa fa-edit"></i> Edit
+                          <%- end %>
+                        </li>
+                        <li class="no_border">
+                          <%= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                              <i class="fa fa-trash fa-3"></i> Delete
+                          <%- end %>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
                   <div class="clearfix"></div>
-                  <ul class="dropdown-option product_<%= index + 1 %>">
-                    <span class="arrow-top"></span>
-                    <li>
-                      <%= link_to customer_service_path(service) do %>
-                          <i class="fa fa-eye"></i> Show
-                      <%- end %>
-                    </li>
-                    <li>
-                      <%= link_to edit_customer_service_path(service) do %>
-                          <i class="fa fa-edit"></i> Edit
-                      <%- end %>
-                    </li>
-                    <li class="no_border">
-                      <%= link_to customer_service_path(service), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
-                          <i class="fa fa-trash fa-3"></i> Delete
-                      <%- end %>
-                    </li>
-                  </ul>
                 </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-        <%- end %>
+            <%- end %>
+        <% else %>
+            <h2 class="text-center">No Services Avilable</h2>
+        <% end %>
       </div>
     </div>
   </div>
