--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -1,8 +1,11 @@
-<div id="calendar"></div>
-
+<div class="customer-main-con">
+    <h1 class="page-title">
+      Dashboard
+    </h1>
+    <div id="calendar"></div>
+</div>
 <style>
     #calendar {
-        max-width: 900px;
         margin: 20px auto;
         background: #fff;
         padding: 20px;
