chnages as per sheet

--- a/app/views/customer/advertisements/index.html.erb
+++ b/app/views/customer/advertisements/index.html.erb
@@ -99,7 +99,7 @@
                 </div>
             <%- end %>
         <% else %>
-            <h2 class="text-center">No Advertisement Avilable</h2>
+            <h2 class="text-center">No Advertisement Available</h2>
         <% end %>
       </div>
     </div>
