--- a/app/views/customer/enquiries/index.html.erb
+++ b/app/views/customer/enquiries/index.html.erb
@@ -172,7 +172,7 @@
                 <% end %>
             <%- end %>
         <%- else %>
-            <h2 class="text-center">No Enquiry Avilable</h2>
+            <h2 class="text-center">No Enquiry Available</h2>
         <%- end %>
       </div>
     </div>
