--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -95,7 +95,7 @@
                 </div>
             <%- end %>
         <% else %>
-            <h2 class="text-center">No Product Avilable</h2>
+            <h2 class="text-center">No Product Available</h2>
         <% end %>
       </div>
     </div>
