--- a/app/views/customer/services/index.html.erb
+++ b/app/views/customer/services/index.html.erb
@@ -98,7 +98,7 @@
                 </div>
             <%- end %>
         <% else %>
-            <h2 class="text-center">No Services Avilable</h2>
+            <h2 class="text-center">No Services Available</h2>
         <% end %>
       </div>
     </div>
