--- a/app/views/layouts/customer.html.erb
+++ b/app/views/layouts/customer.html.erb
@@ -39,5 +39,14 @@
   <%- end %>
 </div>
 <%= render partial: 'customer/shared/footer' %>
+
+
+<%= javascript_include_tag 'vendors/theme/icheck' %>
+<%= javascript_include_tag 'vendors/theme/ionrangeslider' %>
+<%= javascript_include_tag 'vendors/theme/jqzoom' %>
+<%= javascript_include_tag 'vendors/theme/card-payment' %>
+<%= javascript_include_tag 'vendors/theme/owl-carousel' %>
+<%= javascript_include_tag 'vendors/theme/magnific' %>
+<%= javascript_include_tag 'vendors/theme/custom' %>
 </body>
 </html>
