--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -133,7 +133,7 @@
       <span class="msg-forgot-password-validation text-danger"></span>
       <input type="number" id='forgot-password' class="form-control" min="10" max="10"  />
       <a href="#nav-forgot-password-dialog" class="hidden popup-text forgot-password-submit2">Proceed</a>
-      <a href="javascript:void(0)" class="forgot-password evt-forgot-password">Proceed</a>
+      <a href="javascript:void(0)" class="btn btn-primary forgot-password evt-forgot-password" style="margin-top: 10px;">Proceed</a>
       <div class="gap gap-small"></div>
     </div>
     <!--Forgot Password Form End-->
