--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -102,7 +102,7 @@
           <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
-            <img src="/assets/logo.jpeg" class="img-responsive" alt="">
+            <img src="http://s3.amazonaws.com/byebuyingproduction/advertisement_images/images/000/000/038/original/logo.jpeg?1474540580" class="img-responsive" alt="">
             <!--Barter-->
           </a>
         </div>
