--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -64,6 +64,9 @@
 .save-full-btn{
   width: 100%;
 }
+.top-column-product{
+  min-height: 350px;
+}
 .customer-main-con{
   width: 100%;
   margin: 20px 0;
