--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -27,74 +27,64 @@
         <div class="col-md-12">
           <div class="contact-main-form">
             <%= simple_form_for [:customer, @product] do |f| %>
-
-                <% unless params[:action] == 'edit' %>
-                <div id="nested-product-images">
-                  <%= f.fields_for :product_images do |builder| %>
-                      <%= render partial: 'application/product_image_fields', locals: { f: builder } %>
-                  <%- end %>
-                  <p id="nested-click"><%= link_to_add_fields "Add Product Image", f, :product_images %></p>
-                </div>
-                    <%end%>
-
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category', label: 'Product Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category', label: 'Product Category ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Product Category'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender', label: 'Gender' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender', label: 'Gender ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Gender'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Product Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Product Subcategory ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Product Category'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :name, label: 'Product Name' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :name, label: 'Product Name ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Product Name'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :description, label: 'Product Description' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :description, label: 'Product Description ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Product Description'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :technical_specification, label: 'Technical Specification' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :technical_specification, label: 'Technical Specification ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Technical Specification'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'State'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'City'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :location, label: 'Location ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Location'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :start_at, label: 'Start at' ,label_html: {class: 'label'}, input_html: {class: 'select-field'} %>
+                    <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Start at'}, input_html: {class: 'select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :end_at, label: 'End at' ,label_html: {class: 'label'}, input_html: {class: 'select-field'} %>
+                    <%= f.input :end_at, label: 'End at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'End at'}, input_html: {class: 'select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :quantity, label: 'Quantity' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :quantity, label: 'Quantity ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Quantity'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <!--<div class="col-xs-12">-->
@@ -111,22 +101,22 @@
 
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_hour_price, label: 'Per Hour Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_hour_price, label: 'Per Hour Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Hour Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_day_price, label: 'Per Day Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_day_price, label: 'Per Day Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Day Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_week_price, label: 'Per Week Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_week_price, label: 'Per Week Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Week Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_month_price, label: 'Per Month Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_month_price, label: 'Per Month Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Month Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
 
@@ -137,24 +127,32 @@
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :refundable_security, label: 'Refundable Security' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :refundable_security, label: 'Refundable Security ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Refundable Security'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :cost_of_replacement, label: 'Cost of Replacement' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :cost_of_replacement, label: 'Cost of Replacement ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Cost of Replacement'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :youtube_link, label: 'Product Youtube Link' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :youtube_link, label: 'Product Youtube Link ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Product Youtube Link'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :other, label: 'Other' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :other, label: 'Other ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Other'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
+                <% unless params[:action] == 'edit' %>
+                    <div id="nested-product-images">
+                      <%= f.fields_for :product_images do |builder| %>
+                          <%= render partial: 'application/product_image_fields', locals: { f: builder } %>
+                      <%- end %>
+                      <p id="nested-click"><%= link_to_add_fields "Add Product Image", f, :product_images %></p>
+                    </div>
+                <%end%>
                 <div class="clearfix"></div>
                 <div class="submit-main">
                   <%= f.submit 'Save', class: 'pushbutton-wide s-button btn btn-primary' %>
@@ -169,6 +167,9 @@
 
 
 <script type="text/javascript" charset="utf-8">
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
 //    $('.submit-main').hide();
 //
     $('#nested-product-images #nested-click').click(function(){
