--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -45,59 +45,59 @@
 
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :category_id, collection: service_category_collertion, prompt: 'Select category', label: 'Service Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :category_id, collection: service_category_collertion, prompt: 'Select category', label: 'Service Category ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Service Category'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Service Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Service Subcategory ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Service Subcategory'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12 for_other">
                   <div class="field-con">
-                    <%= f.input :nature_of_service, label: 'Nature of Services' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :nature_of_service, label: 'Nature of Services ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Nature of Services'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12 membership_blog">
                   <div class="field-con">
-                    <%= f.input :club_name, label: 'Service Club Name' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :club_name, label: 'Service Club Name ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Service Club Name'}, input_html: {class: 'text-field'} %>
                   </div>
                   <div class="field-con">
-                    <%= f.input :membership_plan, label: 'Service Membership Plan' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :membership_plan, label: 'Service Membership Plan ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Service Membership Plan'}, input_html: {class: 'text-field'} %>
                   </div>
                   <div class="field-con">
-                    <%= f.input :start_at, label: 'Start at' ,label_html: {class: 'label'}, input_html: {class: 'select-field'} %>
+                    <%= f.input :start_at, label: 'Start at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Start at'}, input_html: {class: 'select-field'} %>
                   </div>
                   <div class="field-con">
-                    <%= f.input :end_at, label: 'End at' ,label_html: {class: 'label'}, input_html: {class: 'select-field'} %>
+                    <%= f.input :end_at, label: 'End at ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'End at'}, input_html: {class: 'select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12 commercial_space_blog">
                   <div class="field-con">
-                    <%= f.input :area_in_meters, label: 'Area in Meters' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :area_in_meters, label: 'Area in Meters ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Area in Meters'}, input_html: {class: 'text-field'} %>
                   </div>
                   <div class="field-con">
-                    <%= f.input :amenities_available, label: 'Amenities Available' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
-                  </div>
-                </div>
-                <div class="col-xs-12">
-                  <div class="field-con">
-                    <%= f.input :service_description, label: 'Service Description' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :amenities_available, label: 'Amenities Available ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Amenities Available'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :service_description, label: 'Service Description ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Service Description'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'State'}, input_html: {class: 'full-select-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City  ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'City'}, input_html: {class: 'full-select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :location, label: 'Location ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Location'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <!--<div class="col-xs-12">-->
@@ -112,22 +112,22 @@
                 <!--</div>-->
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_hour_price, label: 'Per Hour Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_hour_price, label: 'Per Hour Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Hour Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_day_price, label: 'Per Day Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_day_price, label: 'Per Day Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Day Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_week_price, label: 'Per Week Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_week_price, label: 'Per Week Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Week Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :per_month_price, label: 'Per Month Price' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                    <%= f.input :per_month_price, label: 'Per Month Price ⓘ' ,label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Per Month Price'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
 
@@ -138,12 +138,12 @@
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :youtube_link, label: 'Service Youtube Link', label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :youtube_link, label: 'Service Youtube Link ⓘ', label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Service Youtube Link'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :other, label: 'Other', label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                    <%= f.input :other, label: 'Other ⓘ', label_html: {class: 'label', 'data-toggle': 'tooltip', 'data-placement': 'right' , title: 'Other'}, input_html: {class: 'text-discription'} %>
                   </div>
                 </div>
                 <div class="clearfix"></div>
@@ -159,7 +159,9 @@
 </div>
 
 <script type="text/javascript" charset="utf-8">
-
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
     $('#nested-service-images #nested-click').click(function(){
         if ($("#nested-service-images :input").length > 4){
             this.remove();
