--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -227,7 +227,7 @@
                   <ul class="dropdown-menu dropdown-menu-shipping-cart">
                     <li><a href="/customer/profile">My Profile</a></li>
                     <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
-                    <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
+                    <!--<li><%#= link_to 'Advertisements', customer_advertisements_path %></li>-->
                     <li><%= link_to 'Products', customer_products_path %></li>
                     <li><%= link_to 'Services', customer_services_path %></li>
                     <li><%= link_to 'Enquiries', customer_enquiries_path %></li>
